Feat: Added linear regression standardized and reduced test set size

--- a/2_Create_Train_and_Test_Data.ipynb
+++ b/2_Create_Train_and_Test_Data.ipynb
@@ -1225,7 +1225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the Ierative Imputer from Sklearn to Remove Missing Data\n",
+    "## Use the Iterative Imputer from Sklearn to Remove Missing Data\n",
     "<br>\n",
     "Cited from Scikit-Learn Documentation: <br><br>\n",
     "\n",
@@ -1919,7 +1919,7 @@
    ],
    "source": [
     "# split into train and test sets\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=42)\n",
     "\n",
     "store_to_csv(X_train, Y_train, \"train.csv\", \"data_converted\")\n",
     "store_to_csv(X_test, Y_test, \"test.csv\", \"data_converted\")"
