--- a/3_Trainind_and_Deployment.ipynb
+++ b/3_Trainind_and_Deployment.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "FRAMEWORK_VERSION = \"0.23-1\"\n",
     "script_path = 'source/train_linear_regression.py'\n",
     "\n",
-    "sklearn = SKLearn(\n",
+    "sklearn_linear_regression = SKLearn(\n",
     "    entry_point=script_path,\n",
     "    framework_version=FRAMEWORK_VERSION,\n",
     "    instance_type=\"ml.c4.xlarge\",\n",
@@ -253,7 +253,7 @@
     "%%time\n",
     "\n",
     "# Train the estimator on S3 training data\n",
-    "sklearn.fit({\"train\": train_input})"
+    "sklearn_linear_regression.fit({\"train\": train_input})"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "%%time\n",
     "\n",
     "# deploy the model to create a predictor\n",
-    "predictor = sklearn.deploy(initial_instance_count=1, instance_type='ml.t2.medium')"
+    "predictor_linear_regression = sklearn_linear_regression.deploy(initial_instance_count=1, instance_type='ml.t2.medium')"
    ]
   },
   {
@@ -303,18 +303,22 @@
     "test_data = pd.read_csv(os.path.join(data_dir, \"test.csv\"), header=None, names=None)\n",
     "\n",
     "# labels are in the first column\n",
-    "test_y = test_data.iloc[:,0]\n",
+    "test_y_true = test_data.iloc[:,0]\n",
     "test_x = test_data.iloc[:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples_test = 100\n",
-    "test_y_preds = predictor.predict(test_x[:num_samples_test].values)"
+    "# compute MSE\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "test_y_preds = predictor_linear_regression.predict(test_x.values)\n",
+    "mse = mean_squared_error(test_y_true, test_y_preds)\n",
+    "print(f\"MSE: {mse}\")"
    ]
   },
   {
@@ -336,11 +340,118 @@
     }
    ],
    "source": [
-    "# plot the results\n",
+    "# plot some results\n",
+    "num_samples_test = 100\n",
     "fig = plt.figure(figsize=(16, 8))\n",
-    "plt.plot(test_y_preds)\n",
-    "plt.plot(test_y[:num_samples_test])\n",
+    "plt.plot(test_y_preds[:num_samples_test])\n",
+    "plt.plot(test_y_true[:num_samples_test])\n",
     "plt.legend((\"predictions\", \"ground_truth\"))\n",
+    "plt.ylabel(\"Weekly Sales\")\n",
+    "plt.xlabel(\"Num Sample\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Linear Regression with Standardization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.sklearn.estimator import SKLearn\n",
+    "\n",
+    "FRAMEWORK_VERSION = \"0.23-1\"\n",
+    "script_path = 'source/train_linear_regression.py'\n",
+    "\n",
+    "sklearn_linear_regression_standardized = SKLearn(\n",
+    "    entry_point=script_path,\n",
+    "    framework_version=FRAMEWORK_VERSION,\n",
+    "    instance_type=\"ml.c4.xlarge\",\n",
+    "    role=role,\n",
+    "    sagemaker_session=sagemaker_session\n",
+    "    hyperparameters = {\"standardize\": True})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Train the estimator on S3 training data\n",
+    "sklearn_linear_regression_standardized.fit({\"train\": train_input})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# deploy the model to create a predictor\n",
+    "predictor_linear_regression_standardized = \n",
+    "                        sklearn_linear_regression_standardized.deploy(initial_instance_count=1, instance_type='ml.t2.medium')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute MSE\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "test_y_preds = predictor_linear_regression_standardized.predict(test_x.values)\n",
+    "mse = mean_squared_error(test_y_true, test_y_preds)\n",
+    "print(f\"MSE: {mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot some results\n",
+    "num_samples_test = 100\n",
+    "fig = plt.figure(figsize=(16, 8))\n",
+    "plt.plot(test_y_preds[:num_samples_test])\n",
+    "plt.plot(test_y_true[:num_samples_test])\n",
+    "plt.legend((\"predictions\", \"ground_truth\"))\n",
+    "plt.ylabel(\"Weekly Sales\")\n",
+    "plt.xlabel(\"Num Sample\")\n",
     "plt.show()"
    ]
   },
