Feat: Added source code for training decision tree and random forest

--- a/3_Trainind_and_Deployment.ipynb
+++ b/3_Trainind_and_Deployment.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set number of samples that shall be used for visualising test true data and predicted data\n",
+    "NUM_SAMPLES_TEST_VISUALIZATION = 100"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,8 +353,8 @@
     "# plot some results\n",
     "num_samples_test = 100\n",
     "fig = plt.figure(figsize=(16, 8))\n",
-    "plt.plot(test_y_preds[:num_samples_test])\n",
-    "plt.plot(test_y_true[:num_samples_test])\n",
+    "plt.plot(test_y_preds[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
+    "plt.plot(test_y_true[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
     "plt.legend((\"predictions\", \"ground_truth\"))\n",
     "plt.ylabel(\"Weekly Sales\")\n",
     "plt.xlabel(\"Num Sample\")\n",
@@ -447,12 +457,207 @@
     "# plot some results\n",
     "num_samples_test = 100\n",
     "fig = plt.figure(figsize=(16, 8))\n",
-    "plt.plot(test_y_preds[:num_samples_test])\n",
-    "plt.plot(test_y_true[:num_samples_test])\n",
+    "plt.plot(test_y_preds[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
+    "plt.plot(test_y_true[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
     "plt.legend((\"predictions\", \"ground_truth\"))\n",
     "plt.ylabel(\"Weekly Sales\")\n",
     "plt.xlabel(\"Num Sample\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Decision Tree Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'skopt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-d59d2ef9b8b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msagemaker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimator\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSKLearn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mskopt\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBayesSearchCV\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mFRAMEWORK_VERSION\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"0.23-1\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mscript_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'source/train_decision_tree.py'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'skopt'"
+     ]
+    }
+   ],
+   "source": [
+    "from sagemaker.sklearn.estimator import SKLearn\n",
+    "\n",
+    "FRAMEWORK_VERSION = \"0.23-1\"\n",
+    "script_path = 'source/train_decision_tree.py'\n",
+    "\n",
+    "hyperparameters = {\n",
+    "    \"n-iter\": 32,\n",
+    "    \"n-folds\": 5\n",
+    "}\n",
+    "\n",
+    "sklearn_decision_tree = SKLearn(\n",
+    "    entry_point=script_path,\n",
+    "    framework_version=FRAMEWORK_VERSION,\n",
+    "    instance_type=\"ml.c4.xlarge\",\n",
+    "    role=role,\n",
+    "    sagemaker_session=sagemaker_session,\n",
+    "    hyperparameters = hyperparameters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Train the estimator on S3 training data\n",
+    "sklearn_decision_tree.fit({\"train\": train_input})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# deploy the model to create a predictor\n",
+    "predictor_decision_tree = sklearn_decision_tree.deploy(initial_instance_count=1, instance_type='ml.t2.medium')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute MSE\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "test_y_preds = predictor_decision_tree.predict(test_x.values)\n",
+    "mse = mean_squared_error(test_y_true, test_y_preds)\n",
+    "print(f\"MSE: {mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot some results\n",
+    "fig = plt.figure(figsize=(16, 8))\n",
+    "plt.plot(test_y_preds[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
+    "plt.plot(test_y_true[:NUM_SAMPLES_TEST_VISUALIZATION])\n",
+    "plt.legend((\"predictions\", \"ground_truth\"))\n",
+    "plt.ylabel(\"Weekly Sales\")\n",
+    "plt.xlabel(\"Num Sample\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.sklearn.estimator import SKLearn\n",
+    "\n",
+    "FRAMEWORK_VERSION = \"0.23-1\"\n",
+    "script_path = 'source/train_random_forest.py'\n",
+    "\n",
+    "sklearn_linear_regression_standardized = SKLearn(\n",
+    "    entry_point=script_path,\n",
+    "    framework_version=FRAMEWORK_VERSION,\n",
+    "    instance_type=\"ml.c4.xlarge\",\n",
+    "    role=role,\n",
+    "    sagemaker_session=sagemaker_session\n",
+    "    hyperparameters = {\"standardize\": True})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train XGBoost Regressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
    ]
   },
   {
@@ -464,11 +669,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor_linear_regression.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor.delete_endpoint()"
+    "predictor_linear_regression_standardized.delete_endpoint()"
    ]
   },
   {
