Feat: Added validation set

--- a/2_Create_Train_and_Test_Data.ipynb
+++ b/2_Create_Train_and_Test_Data.ipynb
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1913,21 +1913,24 @@
      "output_type": "stream",
      "text": [
       "The file data_converted/train.csv was created.\n",
-      "The file data_converted/test.csv was created.\n"
+      "The file data_converted/test.csv was created.\n",
+      "The file data_converted/val.csv was created.\n"
      ]
     }
    ],
    "source": [
     "# split into train and test sets\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=42)\n",
+    "X_train, X_val, Y_train, Y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=42)\n",
     "\n",
     "store_to_csv(X_train, Y_train, \"train.csv\", \"data_converted\")\n",
-    "store_to_csv(X_test, Y_test, \"test.csv\", \"data_converted\")"
+    "store_to_csv(X_test, Y_test, \"test.csv\", \"data_converted\")\n",
+    "store_to_csv(X_val, Y_val, \"val.csv\", \"data_converted\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
